--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".activities.SingupActivity" android:screenOrientation="portrait" />
         <activity android:name=".activities.MainActivity" android:screenOrientation="portrait" />
+        <activity android:name=".activities.ViewPillActivity" android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
