--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity android:name=".activities.SingupActivity" android:screenOrientation="portrait" />
         <activity android:name=".activities.MainActivity" android:screenOrientation="portrait" />
         <activity android:name=".activities.ViewPillActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".activities.AddPill" android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
